--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 </head>
 
 <body>
-    <div class="row">
-
+    <div class="row bg-nav">
         <div class="col-sm-2">
-            <img src="" alt="">
+            <img src="assets/images/companion_logo.jpg" alt="companion logo">
         </div>
 
         <div class="col-sm-6">
             <div class="row">
                 <div class="col-sm-12">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <h2>Jorrvaskr: Companions Guild</h2>
+                        <h4>Jorrvaskr</h4>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -52,10 +51,17 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row bg-cool">
         <div class="col">
-
+            <h1 class="text-center">Jorrvaskr -</h1>
+            <h4 class="text-center">Home to the Companions</h4>
         </div>
+        <div class="col">
+            <img src="assets/images/companion_warrior_dovahkiin.png" alt="dovahkiin">
+        </div>
+    </div>
+
+    <div class="row ">
         <div class="col">
 
         </div>
@@ -66,11 +72,7 @@
 
         </div>
     </div>
-    <div class="row">
-        <div class="col">
 
-        </div>
-    </div>
     <div class="row">
         <div class="col">
 
