--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="row bg-nav">
         <div class="col-sm-2">
-            <img src="assets/images/companion_logo.jpg" alt="companion logo">
+            <img src="assets/images/companion_logo.jpg" alt="companion logo" width="150px">
         </div>
 
         <div class="col-sm-6">
@@ -61,21 +61,57 @@
         </div>
     </div>
 
-    <div class="row ">
-        <div class="col">
-
+    <div class="row bg-kindacool">
+        <div class="col-sm-8 offset-sm-2">
+            <h1>The title is Harbinger. I am no man's master. No one is in charge here. Each Shield-brother is his own man, each
+                Shield-sister her own woman. The companions have been famed warriors for a long time. You would be wise to
+                listen [to them]. Any warrior that gets to be old is either fearsome or a coward. I'll let you find out which
+                we are.</h1>
+            <button class="btn btn-primary">More</button>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col">
-
+    <div class="row bg-maybecool">
+        <div class="col-sm-4">
+            <div class="img-inline">
+                <img src="assets/images/skyforge_steel_sword2.jpg" alt="steel sword" width="400px">
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="img-inline-center">
+                <img src="assets/images/companions_jorrvaskr_hearth.jpg" alt="companions hearth" width="400px">
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="img-inline-center">
+                <img src="assets/images/companion_warrior_pic.jpg" alt="contact warrior" width="400px">
+            </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col">
-
+    <div class="row bg-footer">
+        <div class="col-sm-3 offset-sm-1">
+            <div class="row">
+                <div class="col-sm-2">
+                    <a href="#">Jobs</a>
+                </div>
+                <div class="col-sm-2">
+                    <a href="#">History</a>
+                </div>
+                <div class="col-sm-2">
+                    <a href="#">Us</a>
+                </div>
+                <div class="col-sm-2">
+                    <a href="#">Review</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <h4>Send us a Pigeon!</h4>
+            <a href="#"><i class="fas fa-feather-alt"></i></a>
+        </div>
+        <div class="col-sm-3">
+            <h4>The Companions, Jorrvaskr of Whiterun, Skyrim</h4>
         </div>
     </div>
 </body>
