--- a/index.html
+++ b/index.html
@@ -13,105 +13,110 @@
 </head>
 
 <body>
-    <div class="row bg-nav">
-        <div class="col-sm-2">
-            <img src="assets/images/companion_logo.jpg" alt="companion logo" width="150px">
+    <div class="container-fluid">
+        <div class="row bg-nav justify-content-between">
+            <div class="col-sm-2">
+                <img src="assets/images/companion_logo.jpg" alt="companion logo" width="150px">
+            </div>
+
+            <div class="col-sm-6">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <h4></h4>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Expertise</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Work</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </div>
 
-        <div class="col-sm-6">
-            <div class="row">
-                <div class="col-sm-12">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <h4>Jorrvaskr</h4>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">Home
-                                        <span class="sr-only">(current)</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Expertise</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Work</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
+        <div class="row bg-cool" id="grad">
+            <div class="textbox">
+                <div class="col-sm-4 txtwhite txtcool">
+                    <h1 class="text-center m10">Jorrvaskr -</h1>
+                    <h4 class="text-center m10">Home to the Companions</h4>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <img src="assets/images/companion_warrior_dovahkiin.png" alt="dovahkiin" height="84%">
+            </div>
+        </div>
+
+        <div class="row bg-kindacool">
+            <div class="col-sm-8 offset-sm-2 txtcool">
+                <h1 class="p10">The title is Harbinger. I am no man's master. No one is in charge here. Each Shield-brother is his own man,
+                    each Shield-sister her own woman. The companions have been famed warriors for a long time. You would
+                    be wise to listen [to them]. Any warrior that gets to be old is either fearsome or a coward. I'll let
+                    you find out which we are.</h1>
+                <button class="btn btn-gray"> MORE </button>
+            </div>
+        </div>
+
+        <div class="row bg-maybecool">
+            <div class="col-sm-4 txtcool featureH">
+                <div class="img-center">
+                    <h4 class="text-center m12">Expertise</h4>
+                    <img src="assets/images/skyforge_steel_sword2.jpg" alt="steel sword" width="400px" height="100%">
+                    <p class="text-center">
+                        <strong>Our Work, Clients, and Accolades</strong>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-4 txtcool featureH">
+                <div class="img-center m12">
+                    <h4 class="text-center">Location</h4>
+                    <img src="assets/images/companions_jorrvaskr_hearth.jpg" alt="companions hearth" width="400px" height="100%">
+                    <p class="text-center">
+                        <strong>Visit the famed Hall of Jorrvaskr</strong>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-4 txtcool featureH">
+                <div class="img-center m12">
+                    <h4 class="text-center">Contact</h4>
+                    <img src="assets/images/companion_warrior_pic.jpg" alt="contact warrior" width="400px" height="100%">
+                    <p class="text-center">
+                        <strong>Need a warrior for hire? Think you got what it takes to join the Companions?</strong>
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="row bg-cool">
-        <div class="col">
-            <h1 class="text-center">Jorrvaskr -</h1>
-            <h4 class="text-center">Home to the Companions</h4>
-        </div>
-        <div class="col">
-            <img src="assets/images/companion_warrior_dovahkiin.png" alt="dovahkiin">
-        </div>
-    </div>
+        <div class="row bg-footer bg-gray">
+            <div class="col-sm-4 offset-sm-2">
+                <a href="#" class="txtwhite txtcool">Jobs</a>
+                <a href="#" class="txtwhite txtcool">History</a>
+                <a href="#" class="txtwhite txtcool">Us</a>
+                <a href="#" class="txtwhite txtcool">Review</a>
+            </div>
 
-    <div class="row bg-kindacool">
-        <div class="col-sm-8 offset-sm-2">
-            <h1>The title is Harbinger. I am no man's master. No one is in charge here. Each Shield-brother is his own man, each
-                Shield-sister her own woman. The companions have been famed warriors for a long time. You would be wise to
-                listen [to them]. Any warrior that gets to be old is either fearsome or a coward. I'll let you find out which
-                we are.</h1>
-            <button class="btn btn-primary">More</button>
-        </div>
-    </div>
-
-    <div class="row bg-maybecool">
-        <div class="col-sm-4">
-            <div class="img-inline">
-                <img src="assets/images/skyforge_steel_sword2.jpg" alt="steel sword" width="400px">
+            <div class="col-sm-3">
+                <h4 class="text-center txtcool txtwhite">Send us a Pigeon!</h4>
+                <a href="#" class="flex-center">
+                    <i class="fas fa-feather-alt"></i>
+                </a>
             </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="img-inline-center">
-                <img src="assets/images/companions_jorrvaskr_hearth.jpg" alt="companions hearth" width="400px">
+            <div class="col-sm-3">
+                <p class="text-center txtcool txtwhite">Product of The Companions, of Jorrvaskr of Whiterun, Skyrim</p>
             </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="img-inline-center">
-                <img src="assets/images/companion_warrior_pic.jpg" alt="contact warrior" width="400px">
-            </div>
-        </div>
-    </div>
-
-    <div class="row bg-footer">
-        <div class="col-sm-3 offset-sm-1">
-            <div class="row">
-                <div class="col-sm-2">
-                    <a href="#">Jobs</a>
-                </div>
-                <div class="col-sm-2">
-                    <a href="#">History</a>
-                </div>
-                <div class="col-sm-2">
-                    <a href="#">Us</a>
-                </div>
-                <div class="col-sm-2">
-                    <a href="#">Review</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <h4>Send us a Pigeon!</h4>
-            <a href="#"><i class="fas fa-feather-alt"></i></a>
-        </div>
-        <div class="col-sm-3">
-            <h4>The Companions, Jorrvaskr of Whiterun, Skyrim</h4>
         </div>
     </div>
 </body>
