--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
         <div class="row bg-cool" id="grad">
             <div class="textbox">
-                <div class="col-sm-4 txtwhite txtcool">
+                <div class="col-sm-4 offset-sm-1 txtwhite txtcool">
                     <h1 class="text-center m10">Jorrvaskr -</h1>
                     <h4 class="text-center m10">Home to the Companions</h4>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <img src="assets/images/companion_warrior_dovahkiin.png" alt="dovahkiin" height="84%">
+            <div class="col-sm-4 offset-sm-3">
+                <img src="assets/images/companion_warrior_dovahkiin.png" alt="dovahkiin" height="450px" width="600px">
             </div>
         </div>
 
